--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-cdk/lambda-layer-kubectl-v27": "^2.1.0",
+    "@aws-cdk/lambda-layer-kubectl-v29": "^2.1.1",
     "aws-cdk-lib": "2.181.1",
     "constructs": "^10.0.0"
   }
